force-app/main/default/objects/Lead/fields/Autoriza_ser_contactado_pela_LM__c.field-meta.xml
<CustomField>
    <fullName>Autoriza_ser_contactado_pela_LM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autoriza ser contactado pela LM?</label>
    <type>Checkbox</type>
</CustomField>