force-app/main/default/objects/Lead/fields/Canal_de_Interacao__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_Interacao__c</fullName>
    <inlineHelpText>Scheduler Online - cliente agenda online em autonomia (independente se o cliente escolhe fazer presencial ou online)                    
Scheduler Loja - cliente vai à loja, o agendamento é feito pela loja (independente se o cliente escolhe fazer presencial ou online)                 
Scheduler Telefone - cliente liga a pedir para agendar                   
Loja - venda simples em loja (não é agendamento de projeto)                   
VAD - venda simples pela VAD (não é agendamento de projeto)</inlineHelpText>
    <label>Canal de entrada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduler Online</fullName>
            </value>
            <value>
                <fullName>Scheduler Loja</fullName>
            </value>
            <value>
                <fullName>Scheduler Telefone</fullName>
            </value>
            <value>
                <fullName>Loja</fullName>
            </value>
            <value>
                <fullName>VAD</fullName>
            </value>
            <value>
                <fullName>Profissional</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Importação</fullName>
                <isActive>false</isActive>
                <label>Importação</label>
            </value>
            <value>
                <fullName>Manual</fullName>
                <isActive>false</isActive>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Online</fullName>
                <isActive>false</isActive>
                <label>Online</label>
            </value>
            <value>
                <fullName>Redes Sociais</fullName>
                <isActive>false</isActive>
                <label>Redes Sociais</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>