force-app/main/default/objects/Lead/fields/Equipa__c.field-meta.xml
<CustomField>
    <fullName>Equipa__c</fullName>
    <label>Equipa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loja</fullName>
            </value>
            <value>
                <fullName>VAD</fullName>
                <default>true</default>
                <label>VAD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>