force-app/main/default/objects/Lead/fields/Loja_de_Angariacao__c.field-meta.xml
<CustomField>
    <fullName>Loja_de_Angariacao__c</fullName>
    <label>Loja de Angariação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Albufeira</fullName>
            </value>
            <value>
                <fullName>Alfragide</fullName>
            </value>
            <value>
                <fullName>Almada</fullName>
            </value>
            <value>
                <fullName>Alta De Lisboa</fullName>
            </value>
            <value>
                <fullName>Alverca</fullName>
            </value>
            <value>
                <fullName>Amadora</fullName>
            </value>
            <value>
                <fullName>Aveiro</fullName>
            </value>
            <value>
                <fullName>Barcelos</fullName>
            </value>
            <value>
                <fullName>Barreiro</fullName>
            </value>
            <value>
                <fullName>Braga</fullName>
            </value>
            <value>
                <fullName>Bragança</fullName>
            </value>
            <value>
                <fullName>Caldas Da Rainha</fullName>
            </value>
            <value>
                <fullName>Carcavelos</fullName>
            </value>
            <value>
                <fullName>Cascais</fullName>
            </value>
            <value>
                <fullName>Castelo Branco</fullName>
            </value>
            <value>
                <fullName>Chaves</fullName>
            </value>
            <value>
                <fullName>Coimbra</fullName>
            </value>
            <value>
                <fullName>Colombo</fullName>
            </value>
            <value>
                <fullName>Évora</fullName>
            </value>
            <value>
                <fullName>Figueira Da Foz</fullName>
            </value>
            <value>
                <fullName>Funchal</fullName>
            </value>
            <value>
                <fullName>Gaia</fullName>
            </value>
            <value>
                <fullName>Gondomar</fullName>
            </value>
            <value>
                <fullName>Guarda</fullName>
            </value>
            <value>
                <fullName>Guimarães</fullName>
            </value>
            <value>
                <fullName>Leiria</fullName>
            </value>
            <value>
                <fullName>Loulé</fullName>
            </value>
            <value>
                <fullName>Loures</fullName>
            </value>
            <value>
                <fullName>Mafra</fullName>
            </value>
            <value>
                <fullName>Maia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>