force-app/main/default/objects/Lead/fields/Motivo_de_Perda__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Perda__c</fullName>
    <label>Motivo de Perda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Falta de dados para avançar</fullName>
            </value>
            <value>
                <fullName>Cliente não pretende comprar</fullName>
            </value>
            <value>
                <fullName>Resposta fora do tempo</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>NÃO USAR_L2S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>