force-app/main/default/objects/Lead/fields/Numero_de_Conta_na_lead__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Conta_na_lead__c</fullName>
    <externalId>true</externalId>
    <label>Número de Conta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>