force-app/main/default/objects/Lead/fields/ProjectTag__c.field-meta.xml
<CustomField>
    <fullName>ProjectTag__c</fullName>
    <label>Tipo de Projeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>