force-app/main/default/objects/Lead/validationRules/Nao_Modificar_NAO_USAR_L2S.validationRule-meta.xml
<ValidationRule>
    <fullName>Nao_Modificar_NAO_USAR_L2S</fullName>
    <active>true</active>
    <description>Impede que o motivo de perda seja alterado caso seja NÃO USAR_L2S</description>
    <errorConditionFormula>AND( ISCHANGED(Motivo_de_Perda__c),ISPICKVAL(PRIORVALUE(Motivo_de_Perda__c),&quot;NÃO USAR_L2S&quot;))</errorConditionFormula>
    <errorDisplayField>Motivo_de_Perda__c</errorDisplayField>
    <errorMessage>Motivo de Perda não pode ser alterado</errorMessage>
</ValidationRule>