force-app/main/default/objects/Lead/validationRules/Nao_Usar_o_Motivo_de_Perda_NAO_USAR_L2S.validationRule-meta.xml
<ValidationRule>
    <fullName>Nao_Usar_o_Motivo_de_Perda_NAO_USAR_L2S</fullName>
    <active>true</active>
    <description>Impede que utilizadores que não sejam System Administrator usem o motivo de perda &quot;NÃO USAR_L2S&quot;</description>
    <errorConditionFormula>AND( $Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;, ISPICKVAL(Motivo_de_Perda__c, &apos;NÃO USAR_L2S&apos;) )</errorConditionFormula>
    <errorDisplayField>Motivo_de_Perda__c</errorDisplayField>
    <errorMessage>Motivo de Perda inválido</errorMessage>
</ValidationRule>